# testeur_batterie

./: LICENSE  pyproject.toml  testeur.py
data/: aquila_2000.csv
notebook/: Courbes.ipynb
