[project]

name = "testeur-batterie"
version = "0.1.0"
description = "Mesure de la décharge d'une batterie AA"
authors = [{ name = "Daniel Thonon", email = "d.thonon9@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.12"
dependencies = ["seaborn>=0.13", "ipykernel>=6.29", "jupyterlab>=3.5", "pandas>=3.0", "matplotlib>=3.8"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
